--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
           <item
            android:id="@+id/search"
@@ -16,9 +15,9 @@
             android:title="About"
             app:showAsAction="always" />
     <item
-        android:id="@+id/app_bar_switch"
+        android:id="@+id/theme"
+        android:icon="@drawable/dark_theme_foreground"
         android:title="Change Theme"
-        app:actionLayout="@layout/switch_item"
         app:showAsAction="always" />
 
 
